zahir_errours
gcc -Wall -Wextra -Werror -pedantic -std=gnu89 -Wno-format *.c
number.c:1:10: fatal error: main.h: No such file or directory
    1 | #include <main.h>
      |          ^~~~~~~~
compilation terminated.
printf.c: In function ‘printf’:
printf.c:18:7: error: nonnull argument ‘format’ compared to NULL [-Werror=nonnull-compare]
   18 |    if (format == NULL || (format[0] == '\0' || (format[0] == '%' && format[1] == '\0')))
      |       ^
cc1: all warnings being treated as errors
print_functions.c: In function ‘print_int’:
print_functions.c:41:5: error: too few arguments to function ‘print_number_right_shift’
   41 |     print_number_right_shift(/* appropriate arguments */);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from print_functions.c:1:
main.h:105:5: note: declared here
  105 | int print_number_right_shift(char *str, params_t *params);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
print_number.c:33:1: error: return type defaults to ‘int’ [-Werror=return-type]
   33 | intprint_number(char* str, params_t *params)
      | ^~~~~~~~~~~~~~~
print_number.c:104:1: error: return type defaults to ‘int’ [-Werror=return-type]
  104 | intprint_number_left_shift(char* str, params_t *params)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
simple_printers.c:1:9: fatal error: main.h: No such file or directory
    1 | #include<main.h>
      |         ^~~~~~~~

